[package]
name = "rustui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
crossterm = "0.29.0"
tui = "0.19.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"