[package]
name = "rustui-client"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { workspace = true }
tui = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = "0.10"
base64 = "0.21"
sha2 = "0.10"
rand = { workspace = true }
