[package]
name = "rustui-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
